# Ryt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/graphics/: color.hpp
include/math/: vec3.hpp
include/ryt/: rtcore.hpp
include/ryt/core/: aabb.hpp  bvh.hpp  hitrecord.hpp  hittable.hpp  renderer.hpp  rtcontext.hpp
include/ryt/graphics/: color.hpp  hit_record.hpp  hittable.hpp  material.hpp  quad.hpp  rtcontext.hpp  sphere.hpp  texture.hpp
include/ryt/graphics/material/: base.hpp  mcore.hpp
include/ryt/math/: common.hpp  interval.hpp  random.hpp  ray.hpp  vec3.hpp
include/ryt/utils/: camera.hpp  framebuffer.hpp  rytimage.hpp
src/: main.cpp
src/core/: aabb.cpp  bvh.cpp  hitrecord.cpp  hittable.cpp  renderer.cpp  rtcontext.cpp
src/graphics/: color.cpp  hitrecord.cpp  material.cpp  quad.cpp  sphere.cpp  texture.cpp
src/math/: common.cpp  interval.cpp  random.cpp  ray.cpp  vec3.cpp
src/utils/: aabb.cpp  camera.cpp  framebuffer.cpp  rytimage.cpp
